# Beacon

./: .gitignore
hardware/: Audio_IO.kicad_sch  Beacon_Multiboard.csv  Beacon_Multiboard.kicad_prl  Board_Touch.kicad_prl  Ideas.kicad_sch  Light_Board.kicad_sch  Main_Board.kicad_prl  Regulators.kicad_sch  Tactiles.kicad_sch  Vibrate.kicad_sch
hardware/Archive/: #auto_saved_files#  Ambient_Light.kicad_sch  Audio_Board.kicad_sch  Beacon_Multiboard.kicad_prl  Beacon_Multiboard.kicad_pro  Beacon_Multiboard.kicad_sch  Beacon_Multiboard.xml  Board_Gen.bat  IMU.kicad_sch  IO_Expander.kicad_sch  Legend.kicad_sch  MCU.kicad_sch  MCU_Peripherals.kicad_sch  Main_Board.kicad_sch  Microphone.kicad_sch  Tactile_Board.kicad_sch  Touch_Board.kicad_sch  USB.kicad_sch  _autosave-Fret_Assembly.kicad_sch  fp-info-cache
hardware/Beacon_Lite/: #auto_saved_files#  Ambient_Light.kicad_sch  Audio.kicad_sch  Beacon_Lite.kicad_prl  Beacon_Lite.kicad_pro  Beacon_Lite.kicad_sch  Beacon_Lite_Library.bak  Beacon_Lite_Library.kicad_sym  FLED.kicad_sch  FLED_Control.kicad_sch  FLED_Field.kicad_sch  IO_Expander.kicad_sch  MCU.kicad_sch  Motion_Sensor.kicad_sch  Power_Supplies.kicad_sch  Press_Detect.kicad_sch  Press_Detection.kicad_sch  _autosave-Press_Detect.kicad_sch  sym-lib-table  untitled.kicad_sch
hardware/Bom/: Capacitor_Estimates.csv  ibom.html
hardware/LT_Spice/: Press_Detection_Transient.asc  Press_Detection_Transient.op.raw  Press_Detection_Transient.raw
software/.metadata/: .log4j2.xml  version.ini
software/Beacon_Lite/Beacon_Lite/cmake/beacon/: CMakeLists.txt
software/Beacon_Lite_MX/: .cproject  .mxproject  .project  Beacon_Lite.ioc
(+265 files in other folders)
